--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".login.logIn" />
+        <activity android:name=".signup.otpFragment"/>
+        <activity android:name=".splash_screen"/>
+        <activity android:name=".signup.signUp"/>
         <activity
             android:name=".dashboard.userDashboard"
             android:label="@string/title_activity_user_dashboard"
