--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,13 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+        <activity android:name=".splash_screen">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -33,7 +40,6 @@
         </activity>
         <activity android:name=".login.logIn" />
         <activity android:name=".signup.otpFragment"/>
-        <activity android:name=".splash_screen"/>
         <activity android:name=".signup.signUp"/>
         <activity
             android:name=".dashboard.userDashboard"
