--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
@@ -43,8 +42,8 @@
         <activity android:name=".signup.signUp"/>
         <activity
             android:name=".dashboard.userDashboard"
-            android:label="@string/title_activity_user_dashboard"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:label="@string/title_activity_user_dashboard"/>
     </application>
 
 </manifest>
