--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.2.0'
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
-
+    compile 'com.r0adkll:slidableactivity:2.0.5'
+    compile 'com.r0adkll:slidableactivity:2.0.5-SNAPSHOT'
     testCompile 'junit:junit:4.12'
 }
