--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.r0adkll:slidableactivity:2.0.5'
-    compile 'com.r0adkll:slidableactivity:2.0.5-SNAPSHOT'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     testCompile 'junit:junit:4.12'
 }
