--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     compile 'com.r0adkll:slidableactivity:2.0.5'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.yalantis:flipviewpager:1.0.0'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
 }
